# ViennaPS

Examples/HoleEtching/: HoleEtching.cpp
Examples/SF6O2EtchingCompact/: CMakeLists.txt  CSVWriter.hpp  DimensionExtraction.cpp  FilenameUtils.hpp  SF6O2EtchingCompact.cpp  SF6O2EtchingCompact.hpp  dimensionsP&y35ptGrid.csv  parameters.hpp.in
Examples/SiO2Etching/: CMakeLists.txt  SiO2Etching.cpp  config.txt  geometryFactory.hpp
Examples/TrenchDeposition/: TrenchDeposition.cpp
Examples/TrenchEtching/: CMakeLists.txt  TrenchEtching.cpp
include/: psConfigParser.hpp  psProcess.hpp
include/Geometries/: psMakeHole.hpp  psMakeTrench.hpp
include/Models/: SF6O2Etching.hpp  SiO2Etching.hpp
